[gd_scene load_steps=4 format=3 uid="uid://dse4c8amop14o"]

[ext_resource type="FontFile" uid="uid://yhjiclbd7vo0" path="res://assets/Fonts/dogicapixelbold.otf" id="1_njkqv"]
[ext_resource type="Script" uid="uid://diu86s0w41xhn" path="res://scripts/UI/game_over.gd" id="1_vop4n"]
[ext_resource type="FontFile" uid="uid://b1i5vpmfn2fv2" path="res://assets/Fonts/dogicapixel.otf" id="3_l48yu"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vop4n")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -30.0
offset_right = 154.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_njkqv")
theme_override_font_sizes/font_size = 24
text = "Game Over !"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_njkqv")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RestLabel" type="Label" parent="VBoxContainer/HBox"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_l48yu")
theme_override_font_sizes/font_size = 8
text = "Press \"Fire\" to Reset"

[node name="sepLabel" type="Label" parent="VBoxContainer/HBox"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_l48yu")
theme_override_font_sizes/font_size = 8
text = "||"

[node name="QuitLabel" type="Label" parent="VBoxContainer/HBox"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_l48yu")
theme_override_font_sizes/font_size = 8
text = "Press \"Back\" to Quit!"
